# knut

./: .clang-format  .clazy  .codespellrc  .gitattributes  .gitignore  .gitmodules  .gitreview  .krazy  .pre-commit-config.yaml  3RDPARTY.md  404.html  AppxManifest.xml.in  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  REUSE.toml  _clang-format  architecture.qmodel  index.html  knut.code-workspace  knut.pri  knut.pro  main.cpp  mkdocs.yml  rc.pro  rc2ui.cpp  rc2ui.h  sanitizers.supp  sitemap.xml
src/: CMakeLists.txt  _clang-format  actiondialog.cpp  actiondialog.h  actiondialog.ui  assetdialog.cpp  assetdialog.h  assetdialog.ui  assetmodel.cpp  assetmodel.h  commandlineparser.cpp  commandlineparser.h  contenttree.cpp  contenttree.h  converter.cpp  converter.h  document.cpp  document.h  documentcacher.cpp  documentcacher.h  documentloader.cpp  documentloader.h  fileselector.cpp  fileselector.h  global.h  includemodel.cpp  includemodel.h  jsrunner.cpp  jsrunner.h  knut.rc  lexer.l  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menudialog.cpp  menudialog.h  menudialog.ui  menumodel.cpp  menumodel.h  (+33 more)
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  astnode.cpp  astnode.h  classsymbol.cpp  classsymbol.h  codedocument.cpp  codedocument.h  codedocument_p.cpp  codedocument_p.h  conversionprogressdialog.cpp  conversionprogressdialog.h  conversionprogressdialog.ui  converter.cpp  converter.h  core.pri  core.qrc  core_global.h  cppclass.cpp  cppclass.h  cppdocument.cpp  cppdocument.h  cppdocument_p.cpp  cppdocument_p.h  cppfunction.cpp  cppfunction.h  cppfunctionsymbol.cpp  cppfunctionsymbol.h  cpplanguagedata.cpp  cpplanguagedata.h  csharpdocument.cpp  csharpdocument.h  dartdocument.cpp  dartdocument.h  data.h  dataexchange.cpp  dataexchange.h  dialogconverter.cpp  dir.cpp  dir.h  document.cpp  (+115 more)
src/gui/: CMakeLists.txt  KDSignalThrottler.cpp  KDSignalThrottler.h  abstractpanel.h  apiexecutorwidget.cpp  apiexecutorwidget.h  apiexecutorwidget.ui  apiselector.cpp  apiselector.h  apiselector.ui  codeview.cpp  codeview.h  documentpalette.cpp  documentpalette.h  fileselector.cpp  fileselector.h  findadapter.cpp  findadapter.h  findinfilespanel.cpp  findinfilespanel.h  findinterface.h  findwidget.cpp  findwidget.h  findwidget.ui  gui.qrc  gui_constants.h  guisettings.cpp  guisettings.h  highlightdelegate.cpp  highlightdelegate.h  highlightsearchdelegate.cpp  highlightsearchdelegate.h  historypanel.cpp  historypanel.h  imageview.cpp  imageview.h  interfacedialog.cpp  interfacedialog.h  interfacedialog.ui  interfacesettings.cpp  (+80 more)
src/interface/: CMakeLists.txt  interface.qrc  knutmain.cpp  knutmain.h  message.cpp  message.h  scriptmanager.cpp  scriptmanager.h  scriptrunner.cpp  scriptrunner.h  testutil.cpp  testutil.h
src/lsp/: CMakeLists.txt  capabilities.h  client.cpp  client.h  clientbackend.cpp  clientbackend.h  initialize_message.cpp  initialize_message.h  initialize_request.cpp  initialize_request.h  json.h  lsp_types.h  lsp_utils.cpp  lsp_utils.h  message.cpp  message.h  message_types.h  messages.h  notificationmessage.h  notificationmessage_json.h  notifications.h  requestmessage.h  requestmessage_json.h  requests.h  shutdown_request.h  types.h  types_json.cpp  types_json.h
src/models/: acceleratormodel.cpp  acceleratormodel.h  assetmodel.cpp  assetmodel.h  dialogmodel.cpp  dialogmodel.h  includemodel.cpp  menumodel.cpp  menumodel.h  models.pri  stringmodel.cpp  stringmodel.h  toolbarmodel.cpp
src/rccore/: CMakeLists.txt  data.cpp  data.h  lexer.cpp  lexer.h  rc_convert.cpp  rc_parse.cpp  rc_utility.cpp  rc_utils.cpp  rc_utils.h  rc_write.cpp  rccore.qrc  rcfile.h  ribbon.cpp  ribbon.h  stream.cpp  stream.h  uiwriter.cpp  uiwriter.h
src/rcfile/: CMakeLists.txt  data.cpp  data.h  lexer.cpp  lexer.h  rc_convert.cpp  rc_parse.cpp  rc_utils.cpp  rc_utils.h  rc_write.cpp  rcfile.h  stream.cpp  stream.h
src/rcui/: CMakeLists.txt  acceleratormodel.cpp  acceleratormodel.h  assetmodel.cpp  assetmodel.h  datamodel.cpp  datamodel.h  dialogmodel.cpp  dialogmodel.h  includemodel.cpp  includemodel.h  menumodel.cpp  menumodel.h  rcfileview.cpp  rcfileview.h  rcfileview.ui  rcsyntaxhighlighter.cpp  rcsyntaxhighlighter.h  rcviewer_global.h  ribbonmodel.cpp  ribbonmodel.h  stringmodel.cpp  stringmodel.h  toolbarmodel.cpp  toolbarmodel.h
src/resources/: resources.qrc
src/script/: scriptmanager.cpp  scriptmanager.h  scriptrunner.cpp  scriptrunner.h  testutil.cpp  testutil.h
src/treesitter/: CMakeLists.txt  languages.h  node.cpp  node.h  parser.cpp  parser.h  predicates.cpp  predicates.h  query.cpp  query.h  transformation.cpp  transformation.h  tree.cpp  tree.h  tree_cursor.cpp  tree_cursor.h
src/ui/: CMakeLists.txt  knutmain.cpp  knutmain.h
src/utils/: CMakeLists.txt  json.h  json_helper.cpp  json_helper.h  json_utils.cpp  json_utils.h  log.h  log_utils.h  qt_fmt_format.h  qt_fmt_helpers.h  qt_std_format.h  qtuiwriter.cpp  qtuiwriter.h  string_helper.cpp  strings.cpp  strings.h  test_utils.h
tests/: CMakeLists.txt  tests.pro  tst_client.cpp  tst_clientbackend.cpp  tst_codedocument.cpp  tst_cppdocument.cpp  tst_cppdocument_clangd.cpp  tst_cppdocument_treesitter.cpp  tst_jsondocument.cpp  tst_jsonify.cpp  tst_jsontransforms.cpp  tst_knut.cpp  tst_lspdocument.cpp  tst_photon.cpp  tst_photon_treesitter.cpp  tst_qmldocument.cpp  tst_qt_fmt_format.cpp  tst_qt_std_format.cpp  tst_qttsdocument.cpp  tst_qtuidocument.cpp  tst_rclexer.cpp  tst_rcparser.cpp  tst_rcwriter.cpp  tst_settings.cpp  tst_stringutils.cpp  tst_symbol.cpp  tst_textdocument.cpp  tst_treesitter.cpp  tst_uidocument.cpp
tests/common/: test_cpputils.h  test_utils.h  testutil.cpp  testutil.h
tests/converter/: converter.pro  tst_convertertest.cpp
tests/lexer/: lexer.pro  tst_lexertest.cpp
tests/parser/: parser.pro  tst_parsertest.cpp
tools/cpp2doc/: CMakeLists.txt  cpp2doc.cpp  data.h  docwriter.cpp  docwriter.h  sourceparser.cpp  sourceparser.h
tools/rcviewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  rcviewer.cpp
utils/: CMakeLists.txt  qt_std_format.h
(+583 files in other folders)
