project(Utils)
find_package(Qt6 REQUIRED COMPONENTS Core)
add_library(${PROJECT_NAME} STATIC qt_fmt_helpers.h)
if(KNUT_USE_STD_FORMAT)
  target_sources(${PROJECT_NAME} PUBLIC qt_std_format.h)
else()
  target_sources(${PROJECT_NAME} PUBLIC qt_fmt_format.h)
endif()

target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core)
