project(knut-core LANGUAGES CXX)

set(PROJECT_SOURCES
    astnode.h
    astnode.cpp
    classsymbol.h
    classsymbol.cpp
    cpplanguagedata.h
    cpplanguagedata.cpp
    cppdocument.h
    cppdocument.cpp
    cppdocument_p.h
    cppdocument_p.cpp
    functionsymbol.h
    functionsymbol.cpp
    dir.h
    dir.cpp
    document.h
    document.cpp
    file.h
    file.cpp
    fileinfo.h
    fileinfo.cpp
    json_utils.h
    imagedocument.h
    imagedocument.cpp
    knutcore.h
    knutcore.cpp
    logger.h
    logger.cpp
    lspdocument.h
    lspdocument.cpp
    lspdocument_p.h
    lspdocument_p.cpp
    mark_p.h
    mark.h
    mark.cpp
    message.h
    message.cpp
    messagemap.h
    messagemap.cpp
    project.h
    project.cpp
    project_p.h
    qdirvaluetype.h
    qdirvaluetype.cpp
    qfileinfovaluetype.h
    qfileinfovaluetype.cpp
    rangemark_p.h
    querymatch.h
    querymatch.cpp
    rangemark.h
    rangemark.cpp
    rcdocument.h
    rcdocument.cpp
    scriptdialogitem.h
    scriptdialogitem.cpp
    scriptdialogitem_p.h
    scriptdialogitem_p.cpp
    scriptitem.h
    scriptitem.cpp
    scriptmanager.h
    scriptmanager.cpp
    scriptmodel.h
    scriptmodel.cpp
    scriptrunner.h
    scriptrunner.cpp
    settings.h
    settings.cpp
    slintdocument.h
    slintdocument.cpp
    string_utils.h
    string_utils.cpp
    symbol.h
    symbol.cpp
    textdocument.h
    textdocument.cpp
    textdocument_p.h
    texteditor.h
    texteditor.cpp
    textlocation.h
    textlocation.cpp
    textrange.h
    textrange.cpp
    uidocument.h
    uidocument.cpp
    qmldocument.h
    qmldocument.cpp
    userdialog.h
    userdialog.cpp
    utils.h
    utils.cpp
    core.qrc)

add_library(${PROJECT_NAME} STATIC ${PROJECT_SOURCES})
target_link_libraries(
  ${PROJECT_NAME}
  PUBLIC nlohmann_json::nlohmann_json
         spdlog::spdlog
         pugixml::pugixml
         kdalgorithms
         Qt${QT_VERSION_MAJOR}::Core
         Qt${QT_VERSION_MAJOR}::CorePrivate
         Qt${QT_VERSION_MAJOR}::Qml
         Qt${QT_VERSION_MAJOR}::QmlPrivate
         Qt${QT_VERSION_MAJOR}::Quick
         Qt${QT_VERSION_MAJOR}::Widgets
         Qt${QT_VERSION_MAJOR}::WidgetsPrivate
         Qt${QT_VERSION_MAJOR}::UiTools
         knut-lsp
         knut-treesitter
         knut-rccore)
target_include_directories(${PROJECT_NAME}
                           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..)
